[package]
name = "stringart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
image = "0.25.2"
imageproc = "0.25.0"
nalgebra = "0.33.0"
tqdm = "0.7.0"
