[package]
name = "stringart"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
image = "0.25.2"
rayon = "1.10.0"

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
wee_alloc = "0.4.5"

[lib]
name = "libstringart"
crate-type = ["cdylib"]

# For WASM
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

# Default `release` options for CLI
[profile.cli-release]
inherits = "release"
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


